--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title><link rel="stylesheet" href="index.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
     <header>
         <div id="header-left">
@@ -13,24 +16,150 @@
             <a href="service">service</a>
             <a href="brand">brand</a>
         </div>
-        <div id="header-center"> 
-            <img src="https://assets.oneweb.mercedes-benz.com/plugin/hp-assets/latest/images/brands/mercedes-benz/logo.svg" alt=""></div>
+        <div id="header-center">
+            <img src="https://assets.oneweb.mercedes-benz.com/plugin/hp-assets/latest/images/brands/mercedes-benz/logo.svg"
+                alt="">
+        </div>
         <div id="header-right">
             <a href="provider">provider/..</a>
-            <a href="search"><img src="https://assets.oneweb.mercedes-benz.com/plugin/workbench/assets/4.10.2/icons/bds/search/24.svg" alt=""></a>
+            <a href="search"><img
+                    src="https://assets.oneweb.mercedes-benz.com/plugin/workbench/assets/4.10.2/icons/bds/search/24.svg"
+                    alt=""></a>
             <a href="">
-                <img src="https://assets.oneweb.mercedes-benz.com/plugin/workbench/assets/4.10.2/icons/bds/star/24.svg" alt="">
+                <img src="https://assets.oneweb.mercedes-benz.com/plugin/workbench/assets/4.10.2/icons/bds/star/24.svg"
+                    alt="">
             </a>
             <a href="location">
-                <img src="https://assets.oneweb.mercedes-benz.com/plugin/workbench/assets/4.10.2/icons/bds/location/24.svg" alt="">
+                <img src="https://assets.oneweb.mercedes-benz.com/plugin/workbench/assets/4.10.2/icons/bds/location/24.svg"
+                    alt="">
             </a>
             <a href="login">login
-                <img src="https://assets.oneweb.mercedes-benz.com/plugin/workbench/assets/4.10.2/icons/bds/user/24.svg" alt="">
+                <img src="https://assets.oneweb.mercedes-benz.com/plugin/workbench/assets/4.10.2/icons/bds/user/24.svg"
+                    alt="">
             </a>
         </div>
-
     </header>
-    <div id="image"> <img src="https://www.mercedes-benz.co.in/content/dam/retail/india/june2025newcampaign/mb_pre_festive_tactical_campaign_glc_oneweb.jpg/1751368536276.jpg" alt="">
-    <div> <h1></h1></div></div>
+
+    <div id="image"> 
+        <img 
+            src="https://www.mercedes-benz.co.in/content/dam/retail/india/june2025newcampaign/mb_pre_festive_tactical_campaign_glc_oneweb.jpg/1751368536276.jpg"
+            alt="">
+        <div>
+            <h1>Your fast lean to the extraordinary</h1>
+            <p>drive home to your mecedes-bez with exclusive welcome benefits</p>
+        </div>
+    </div>
+    
+    <div id="logos"><img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+    </div>
+    
+    <div id="recomendation">
+        <h1>Our Recomendation</h1>
+        <div id="center">
+            <div id="r1">
+                <img src="https://www.mercedes-benz.co.in/content/dam/hq/passengercars/cars/amg-gt/amg-gt-2-doors-coupe-c192/overview/highlights/02-2025/images/mercedes-amg-gt-c192-highlights-gt-63-pro-3302x1858-02-2025.jpg/1751370942382.jpg?" alt="">
+                <div id="card-content">
+
+                    <h1>Mercedes-AMG GT 63</h1>
+                    <p>SO THRILLING.SO.AMG</p>
+                    <button>learnmore</button>
+                </div>
+            </div>
+            <div>
+                <img src="https://www.mercedes-benz.co.in/content/dam/india/passengercars/teasers-homepage/eqa-teaser.jpg/1751370942382.jpg?im=Crop,rect=(2843,0,7313,7313);Resize=(800,800)" alt="">
+                <div id="card-content">
+
+                    <h1>The All new EQA</h1>
+                    <P>Switch on to stand out</P>
+                    <button> learn more</button>
+                </div>
+            </div>
+            <div>
+                <img src="https://www.mercedes-benz.co.in/content/dam/india/passengercars/new-homepage/GLA.jpg/1751370942382.jpg" alt="">
+                <div id="card-content">
+
+                    <h1>The New GLA</h1>
+                    <P>Dynamic all the way</P>
+                    <button>learn more</button>
+                </div>
+            </div>
+            <div>
+                <img src="https://www.mercedes-benz.co.in/content/dam/retail/india/amgc_63image_adapt.jpg/1751370942382.jpg?"
+                alt="">
+                <div id="card-content">
+
+                    <h1>The all-new Mercedes-AMG C 63 S E Performance</h1>
+                    <p>Here's to the heart</p>
+                    <button>learn more</button>
+
+                </div>
+            </div>
+            <div>
+                <img src="https://www.mercedes-benz.co.in/content/dam/hq/passengercars/campaigns/compact-car-range/benefits/12-2023/images/mercedes-benz-compact-car-range-benefits-mbux-1884x1884-12-2023.jpg" alt="">
+                <div id="card-content">
+
+                    <h1>Browse & Buy your Mercedes-Benz</h1>
+                    <p>Explore our Online Store.</p>
+                    <button>learn more</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="main">
+        <h1>The perfect blend of luxury, sportiness and performance: Discover our latest models</h1>
+        <div id="b1">
+            <button>Discover all models</button>
+            <button>Discover electric model</button>
+        </div>
+        <div>
+            <div>
+                <h2>Limousine</h2>
+                <p>Discover the models</p>
+                <img src="" alt="">
+            </div>
+            <div>
+                <h2>SUV Range</h2>
+                <p>Discover the model</p>
+                <img src="" alt="">
+            </div>
+            <div>
+                <h2>Roadsters</h2>
+                <p>Discover the model</p>
+                <img src="" alt="">
+            </div>
+        </div>
+    </div>
+    <div>
+        <h3>Service and accessories</h3>
+        <div>
+            <div>
+                <img src="https://www.mercedes-benz.co.in/content/dam/hq/passengercars/services/mercedes-me/imgLPtextmediammeid.jpg/1740015975368.jpg?i"
+                alt="">
+                <h4>Digital extras for your Mercedes-Benz</h4>
+                <p>Simply book additional digital extras and experience your Mercedes-Benz in a new way.</p>
+                <input type="text" placeholder="buy online now">
+            </div>
+            <div>
+                <img src="https://www.mercedes-benz.co.in/content/dam/india/passengercars/maintenance/service-packages-image1.jpg/1740065262547.jpg?"
+                alt="">
+                <h4>Maintenance and Service</h4>
+                <p>Enjoy Peace of Mind with Mercedes-Benz Service, Maintenance and Repair.</p>
+                <input type="text" placeholder="learn more">
+            </div>
+            <div>
+                <img src="https://www.mercedes-benz.co.in/content/dam/india/…?im=Crop,rect=(0,844,2668,1500);Resize=(1280,720)"
+                alt="">
+                <h4>Mercedes-Benz Collection Items</h4>
+                <p>Discover Mercedes-Benz Collection: Superior quality, iconic design, crafted with passion.</p>
+                <input type="text" placeholder="Explore at an outlet near you">
+            </div>
+        </div>
+    </div>
+
+
+
 </body>
+
 </html>
