--- a/index.html
+++ b/index.html
@@ -108,52 +108,51 @@
         </div>
     </div>
     <div id="main">
-        <h1>The perfect blend of luxury, sportiness and performance: Discover our latest models</h1>
+        <h1>The perfect blend of luxury, sportiness and  <br>performance: Discover our latest models</h1>
         <div id="b1">
             <button>Discover all models</button>
             <button>Discover electric model</button>
         </div>
-        <div>
-            <div>
+        <div id="model">
+            <div id="model-1">
                 <h2>Limousine</h2>
                 <p>Discover the models</p>
-                <img src="" alt="">
+                <img src="https://media.oneweb.mercedes-benz.com/images/static/v1/9789/8/cd/f01f6151bdc78c913c23cda769c0092d7d065.png?" alt="">
             </div>
-            <div>
+            <div id="model-1">
                 <h2>SUV Range</h2>
                 <p>Discover the model</p>
-                <img src="" alt="">
-            </div>
-            <div>
+                <img src=""alt="">
+            <div id="model-1">
                 <h2>Roadsters</h2>
                 <p>Discover the model</p>
                 <img src="" alt="">
             </div>
         </div>
     </div>
-    <div>
+    <div id="service">
         <h3>Service and accessories</h3>
-        <div>
-            <div>
+        <div id="service-ab">
+            <div id="service-a">
                 <img src="https://www.mercedes-benz.co.in/content/dam/hq/passengercars/services/mercedes-me/imgLPtextmediammeid.jpg/1740015975368.jpg?i"
                 alt="">
                 <h4>Digital extras for your Mercedes-Benz</h4>
                 <p>Simply book additional digital extras and experience your Mercedes-Benz in a new way.</p>
-                <input type="text" placeholder="buy online now">
+                <button>by online now</button>
             </div>
-            <div>
+            <div id="service-a">
                 <img src="https://www.mercedes-benz.co.in/content/dam/india/passengercars/maintenance/service-packages-image1.jpg/1740065262547.jpg?"
                 alt="">
                 <h4>Maintenance and Service</h4>
                 <p>Enjoy Peace of Mind with Mercedes-Benz Service, Maintenance and Repair.</p>
-                <input type="text" placeholder="learn more">
+                <button>learn more</button>
             </div>
-            <div>
-                <img src="https://www.mercedes-benz.co.in/content/dam/india/…?im=Crop,rect=(0,844,2668,1500);Resize=(1280,720)"
+            <div id="service-a">
+                <img src="https://www.mercedes-benz.co.in/content/dam/india/passengercars/new-homepage/mbcs-g-class_56A7011.jpeg/1740065391112.jpg?"
                 alt="">
                 <h4>Mercedes-Benz Collection Items</h4>
                 <p>Discover Mercedes-Benz Collection: Superior quality, iconic design, crafted with passion.</p>
-                <input type="text" placeholder="Explore at an outlet near you">
+                <button>Explore at an outlet near you</button>
             </div>
         </div>
     </div>
