Fix image URLs in index.html for models and service sections

--- a/index.html
+++ b/index.html
@@ -117,16 +117,16 @@
             <div id="model-1">
                 <h2>Limousine</h2>
                 <p>Discover the models</p>
-                <img src="https://media.oneweb.mercedes-benz.com/images/static/v1/9789/8/cd/f01f6151bdc78c913c23cda769c0092d7d065.png?" alt="">
+                <img src="https://media.oneweb.mercedes-benz.com/images/static/v1/9789/8/cd/f01f6151bdc78c913c23cda769c0092d7d065.png" alt="">
             </div>
             <div id="model-1">
                 <h2>SUV Range</h2>
                 <p>Discover the model</p>
-                <img src=""alt="">
+                <img src="https://media.oneweb.mercedes-benz.com/images/dynamic/europe/IN/465600/X24/iris.png?q=COSY-EU-100-1713d0VXqr8gqtyO67PobzIr3eWsrrCsdRRzwQZgk4ZbMw3SGtlaWtsd2H%25cUfgUfXGEzymJ0l7%25fOB2XgRbApJkyI5us5xQC3UkTkzNGLdm7j0M3hKVHtc%25YhD3Lyr%258cDYax4j8rH1sItn8wUI2oiZGBEM4F0APTg9Ben6PDAs6SeWZSjtsdF63cUf99kXGEB6SJ0lIMhOB2iMwbAp0PyI5uBcDQC3AiZkzN5Obm7jd03hKVfzh%25vqhrdyLRmYDYaxh4SrH1lCin8w2TyoiZpQIM4F6CFTg9hhO6PKNCZnX2f3SNYL5Z3HDkSW9wUwopoL24PvEa2zq7dXrCgQ&imgt=P27&bkgnd=9&pov=BE040&uni=m&width=400&im=Crop,rect=(0,0,400,187),gravity=North" alt="">
             <div id="model-1">
                 <h2>Roadsters</h2>
                 <p>Discover the model</p>
-                <img src="" alt="">
+                <img src="https://assets.oneweb.mercedes-benz.com/iris/iris.png?COSY-EU-100-1713d0VXq0WFqtyO67PobzIr3eWsrrCsdRRzwQZUnRZbMw3SGtGyWtsd2HdcUfp8qXGEubmJ0l3ItOB2NQnbApjtwI5uVKMQC31C1kzNwzdm7jZeohKVFsW%25vqCtTyLRzcyYax7oxrH1Kj1n8wsOcoiZUidM4FGTlTg90k26PDMI6SeWzXRtsd7YNcUfKM6XGEv5RJ0lgYlOB2PBqbApedlI5usQMQC3UvrkzNGLNm7j0afhKVHXt%25vq8cXyr%25kWfDpJJ0lCrnOIJRdAbQOznRI5uefuQC3PS9kzN5P6m7jdA9hKVvsW%25vqLUayLRaARYaBEUVmMDZfrE8OYTwHxXr1RjiiF2MpwQ1pnIu2fzfXRXPq0Agjeq89iph1p&imgt=P27&bkgnd=9&pov=BE040,DZO&uni=m&width=400&im=Crop,rect=(0,0,400,187),gravity=North" alt="">
             </div>
         </div>
     </div>
@@ -141,14 +141,13 @@
                 <button>by online now</button>
             </div>
             <div id="service-a">
-                <img src="https://www.mercedes-benz.co.in/content/dam/india/passengercars/maintenance/service-packages-image1.jpg/1740065262547.jpg?"
-                alt="">
+                <img src="https://www.mercedes-benz.co.in/content/dam/india/passengercars/maintenance/service-packages-image1.jpg/1740065262547.jpg"                 alt="">
                 <h4>Maintenance and Service</h4>
                 <p>Enjoy Peace of Mind with Mercedes-Benz Service, Maintenance and Repair.</p>
                 <button>learn more</button>
             </div>
             <div id="service-a">
-                <img src="https://www.mercedes-benz.co.in/content/dam/india/passengercars/new-homepage/mbcs-g-class_56A7011.jpeg/1740065391112.jpg?"
+                <img src="https://www.mercedes-benz.co.in/content/dam/india/passengercars/new-homepage/mbcs-g-class_56A7011.jpeg/1740065391112.jpg"
                 alt="">
                 <h4>Mercedes-Benz Collection Items</h4>
                 <p>Discover Mercedes-Benz Collection: Superior quality, iconic design, crafted with passion.</p>
