Fix capitalization of "model" link in header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div id="header-left">
-            <a href="models">model</a>
+            <a href="models">Model</a>
             <a href="buy">buy</a>
             <a href="service">service</a>
             <a href="brand">brand</a>
